# cvtkit

./: .gitignore  404.html  ;  README.md  compute_alignment.py  convert_to_log.py  index.html  mkdocs.yml  objects.inv  plot_cameras.py  pyproject.toml  setup.py  sitemap.xml  utils.py
api/camera/: index.html
api/common/: index.html
api/common_camera/: index.html
api/common_io/: index.html
api/common_util/: index.html
api/datasets_blended/: index.html
api/datasets_dtu/: index.html
api/datasets_tanks/: index.html
api/filtering/: index.html
api/geometry/: index.html
api/geometry_g2d/: index.html
api/geometry_g3d/: index.html
api/io/: index.html
api/metrics/: index.html
api/metrics_m2d/: index.html
api/metrics_m3d/: index.html
api/metrics_util/: index.html
api/overview/: index.html
api/util/: index.html
api/visualization_latex/: index.html
api/visualization_util/: index.html
api/visualization_video/: index.html
common_utilities/: avg_depth_range.py  utils.py
comparison/: compare_clouds.py
conduct/: index.html
contrib/: index.html
conversion/: convert_to_log.py
data/examples/: 000_P.txt  001_P.txt  K.txt
development/conduct/: index.html
development/contrib/: index.html
docs/: index.md
docs/api/: camera.md  common.md  common_camera.md  common_io.md  common_util.md  datasets_blended.md  datasets_dtu.md  datasets_tanks.md  filtering.md  geometry.md  geometry_g2d.md  geometry_g3d.md  io.md  metrics.md  metrics_m2d.md  metrics_m3d.md  metrics_util.md  util.md  visualization_latex.md  visualization_util.md  visualization_video.md
docs/resources/: file_formats.md
docs/tutorials/: cloud_to_gif.md  cloud_to_vid.md  gen_vis_maps.md  mesh_to_gif.md  mesh_to_vid.md
examples/: build_latex_doc.py  camera_plotter.py  cameras.ply  colmap_pose_gen.py  colmap_to_ply.py  colmap_to_sparse_depth.py  compute_alignment.py  create_mask_error_figs.py  dense_gt.sh  dtu_point_normals.py  generate_dense_depths.py  generate_sparse_depth.py  generate_visibility_maps.py  mesh_to_gif.py  mesh_to_video.py  plot_3d_visibility_error.py  plot_completeness.py  point_cloud_to_gif.py  point_cloud_to_video.py  pyfmatrix_from_P_viewer.py  pyfmatrix_viewer.py  qr_code_gen.py  relative_transformation.py  render_pc_to_vid.py  sparse_dense_eval.py  test.ply  video_gen.py  video_to_frames.py  video_to_images.py  visibility.sh
examples/data2/: 61.txt  62.txt
examples/epipolar_viewer/: pyfmatrix_from_P_viewer.py  pyfmatrix_viewer.py  svin_to_proj.py
examples/epipolar_viewer/data2/: 00000061_cam.txt
examples/epipolar_viewer/data3/: K.txt  P1.txt  P2.txt  svin_Pamir1.txt
examples/epipolar_viewer/data4/: 03K.txt  03P0.txt  03_P1.txt  K.txt  P0.txt  P1.txt
examples/epipolar_viewer/data5/: K.txt  P1.txt  P2.txt
explanation/: index.html
how_to_guides/: index.html
resources/file_formats/: index.html
resources/pose_file_formats/: index.html
src/cpp/rendering/: CMakeLists.txt  render_points.cpp  rendering.cpp
src/cvt/: __init__.py  camera.py  common.py  filtering.py  geometry.py  io.py  metrics.py  util.py
src/cvt/common/: __init__.py  camera.py  io.py  util.py
src/cvt/datasets/: BaseDataset.py  DTU.py  __init__.py  dtu.py
src/cvt/geometry/: __init__.py  g2d.py  g3d.py  geometry_2d.py
src/cvt/metrics/: __init__.py  metrics_2d.py
src/cvt/visualization/: __init__.py  latex_util.py  util.py  video.py
src/cvtkit/: __init__.py  camera.py  common.py  filtering.py  geometry.py  io.py  metrics.py
src/cvtkit/datasets/: __init__.py
src/cvtkit/visualization/: __init__.py  latex.py  util.py  video.py
src/python/alignment/: compute_alignment.py
src/python/common/: __init__.py  camera.py  io.py
src/python/conversion/: convert_from_log.py  convert_from_log.sh
src/python/examples/: plot_2d_visibility_error.py  plot_3d_visibility_error.py
src/python/geometry/: __init__.py  geometry_2d.py  geometry_3d.py
src/python/metrics/: __init__.py  metrics_3d.py  util.py
src/python/visualization/: create_latex_figures.py  images_to_video_stitch.py  perspective_img.avi  plot_cameras.py
src/python/visualization/report/: report.tex
statistics/: visibility_error.py
tutorials/: index.html
tutorials/cloud_to_gif/: index.html
tutorials/cloud_to_vid/: index.html
tutorials/gen_vis_maps/: index.html
tutorials/mesh_to_gif/: index.html
tutorials/mesh_to_vid/: index.html
tutorials/ph/: index.html
tutorials/tutorials/: index.html
visualization/: compare_clouds.py  compare_clouds_dtu.py  create_mask_error_figs.py  fundamental_from_features.py  images_to_video.py  images_to_video_stitch.py  pyfmatrix_from_P_viewer.py  pyfmatrix_viewer.py  render_pc_to_vid.py  test_dtu.sh
visualization/report/: report.aux  report.tex
