[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvtkit"
version = "0.0.25"
description = "A Python library including general functions and operations on various computer vision related structures."
authors = [{name = "Nathaniel Burgdorfer", email = "nburgdorfer@gmail.com"}]
maintainers = [{name = "Nathaniel Burgdorfer", email = "nburgdorfer@gmail.com"}]

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["computer vision", "3d reconstruction", "geometry", "machine learning"]
classifiers=[
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Topic :: Multimedia",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Multimedia :: Graphics :: 3D Modeling",
	"Topic :: Multimedia :: Graphics :: 3D Rendering",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Image Processing",
	"Topic :: Scientific/Engineering :: Visualization",
	"Topic :: Utilities",
]

requires-python = ">= 3.9"
dependencies = [
	"numpy<=1.26.4",
	"scipy",
	"mkdocstrings-python"
]

[project.urls]
Homepage = "https://github.com/nburgdorfer/vision_toolkit"
Repository = "https://github.com/nburgdorfer/cvtkit"
