[project]
name = "cvtkit"
version = "0.0.38"
description = "A Python library including general functions and operations on various computer vision related structures."
authors = [{name = "Nathaniel Burgdorfer", email = "nburgdorfer@gmail.com"}]
license = {file = "LICENSE"}

readme = "README.md"
keywords = ["computer vision", "3d reconstruction", "geometry", "machine learning"]
requires-python = ">= 3.12"
classifiers=[
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Topic :: Multimedia",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Multimedia :: Graphics :: 3D Modeling",
	"Topic :: Multimedia :: Graphics :: 3D Rendering",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Image Processing",
	"Topic :: Scientific/Engineering :: Visualization",
	"Topic :: Utilities",
]

dependencies = [
    "numpy (>=2.1.2,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "open3d (>=0.19.0,<0.20.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]

[project.urls]
Homepage = "https://nburgdorfer.github.io/cvtkit/"
Repository = "https://github.com/nburgdorfer/cvtkit"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
]
