[project]
name = "cvtkit"
version = "0.0.67"
description = "A Python library including general functions and operations on various computer vision related structures."
authors = [{name = "Nathaniel Burgdorfer", email = "nburgdorfer@gmail.com"}]
license = {file = "LICENSE"}

readme = "README.md"
keywords = ["computer vision", "3d reconstruction", "geometry", "machine learning"]
requires-python = ">= 3.12"
classifiers=[
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Topic :: Multimedia",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Multimedia :: Graphics :: 3D Modeling",
	"Topic :: Multimedia :: Graphics :: 3D Rendering",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Image Processing",
	"Topic :: Scientific/Engineering :: Visualization",
	"Topic :: Utilities",
]

dependencies = [
    "numpy (>=2.1.2,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "open3d>=0.19.0,<0.20.0",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "plyfile>=1.1.2",
]

[project.urls]
Homepage = "https://nburgdorfer.github.io/cvtkit/"
Repository = "https://github.com/nburgdorfer/cvtkit"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.2",
    "twine>=6.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
